--- a/generators/entity/templates/flutter/lib/bloc/entity.state.ejs
+++ b/generators/entity/templates/flutter/lib/bloc/entity.state.ejs
@@ -32,9 +32,8 @@ class <%= entityClass %>State extends Equatable {
   final <%= field.fieldNameCapitalized %>Input <%= field.fieldName %>;
   <%_ }); _%>
 
-  
-  <%= entityClass %>State(
-    <%_ fields.forEach(field => { _%><%_ if(field.fieldType === 'DateTime') { _%><%= field.fieldNameCapitalized %>Input <%= field.fieldName %>,<%_ } _%><%_ }); _%> {
+
+  <%= entityClass %>State({
     this.<%= entityClassPluralLowered %> = const [],
     this.<%= entityInstance %>StatusUI = <%= entityClass %>StatusUI.init,
     this.loaded<%= entityClass %> = const <%= entityClass %>(<%- idField.defaultValue %>, <%_ fields.forEach(field => { _%> <%- field.defaultValue %>, <%_ }); _%><%_ relationships.forEach(relationship => { _%> null, <%_ }); _%>),
@@ -43,36 +42,23 @@ class <%= entityClass %>State extends Equatable {
     this.generalNotificationKey = '',
     this.deleteStatus = <%= entityClass %>DeleteStatus.none,
     <%_ fields.forEach(field => { _%>
-      <%_ if(field.fieldType !== 'DateTime') { _%>
     this.<%= field.fieldName %> = const <%= field.fieldNameCapitalized %>Input.pure(),
-      <%_ } _%>
-      <%_ }); _%>
-  }) <%_ if(hasDateTime) { _%> : <%_ } _%><%_ dateTimeFields.forEach((field, index) => { _%>
-    <%_ if(field.fieldType === 'DateTime' && index != dateTimeFields.length - 1) { _%>
-this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapitalized %>Input.pure(),
-    <%_ } else if(field.fieldType === 'DateTime' && index == dateTimeFields.length - 1) {_%>
-this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapitalized %>Input.pure()
-      <%_ } _%>
-  <%_ }); _%>;
+    <%_ }); _%>
+  });
 
   <%= entityClass %>State copyWith({
-    List<<%= entityClass %>> <%= entityClassPluralLowered %>,
-    <%= entityClass %>StatusUI <%= entityInstance %>StatusUI,
-    bool editMode,
-    <%= entityClass %>DeleteStatus deleteStatus,
-    <%= entityClass %> loaded<%= entityClass %>,
-    FormzStatus formStatus,
-    String generalNotificationKey,
+    List<<%= entityClass %>>? <%= entityClassPluralLowered %>,
+    <%= entityClass %>StatusUI? <%= entityInstance %>StatusUI,
+    bool? editMode,
+    <%= entityClass %>DeleteStatus? deleteStatus,
+    <%= entityClass %>? loaded<%= entityClass %>,
+    FormzStatus? formStatus,
+    String? generalNotificationKey,
     <%_ fields.forEach(field => { _%>
-    <%= field.fieldNameCapitalized %>Input <%= field.fieldName %>,
+    <%= field.fieldNameCapitalized %>Input? <%= field.fieldName %>,
     <%_ }); _%>
   }) {
     return <%= entityClass %>State(
-      <%_ fields.forEach(field => { _%>
-        <%_ if(field.fieldType === 'DateTime') { _%>
-        <%= field.fieldName %>,
-        <%_ } _%>
-        <%_ }); _%>
       <%= entityClassPluralLowered %>: <%= entityClassPluralLowered %> ?? this.<%= entityClassPluralLowered %>,
       <%= entityInstance %>StatusUI: <%= entityInstance %>StatusUI ?? this.<%= entityInstance %>StatusUI,
       loaded<%= entityClass %>: loaded<%= entityClass %> ?? this.loaded<%= entityClass %>,
@@ -81,16 +67,14 @@ this.<%= field.fieldName %> = <%= field.fieldName %> ?? <%= field.fieldNameCapit
       generalNotificationKey: generalNotificationKey ?? this.generalNotificationKey,
       deleteStatus: deleteStatus ?? this.deleteStatus,
       <%_ fields.forEach(field => { _%>
-      <%_ if(field.fieldType !== 'DateTime') { _%>
       <%= field.fieldName %>: <%= field.fieldName %> ?? this.<%= field.fieldName %>,
-      <%_ } _%>
       <%_ }); _%>
     );
   }
 
   @override
   List<Object> get props => [<%= entityClassPluralLowered %>, <%= entityInstance %>StatusUI,
-     loaded<%= entityClass %>, editMode, deleteStatus, formStatus, generalNotificationKey, 
+     loaded<%= entityClass %>, editMode, deleteStatus, formStatus, generalNotificationKey,
      <%_ fields.forEach(field => { _%><%= field.fieldName %>%>,<%_ }); _%>];
 
   @override
