--- a/generators/entity/templates/flutter/lib/entity.model.ejs
+++ b/generators/entity/templates/flutter/lib/entity.model.ejs
@@ -21,18 +21,17 @@ import '../<%- relation.otherEntityFolderName %>/<%- relation.otherEntityFileNam
 class <%= entityClass %> {
 
   @JsonProperty(name: '<%- idField.fieldName _%>')
-  final <%= idField.fieldType %> <%= idField.fieldName %>;
+  final <%= idField.fieldType %>? <%= idField.fieldName %>;
 <%_ fields.forEach(field => { %>
-  @JsonProperty(name: '<%- field.fieldName _%>' <%_ if(field.fieldType === 'DateTime') { _%>, converterParams: {'format': 'yyyy-MM-dd\'T\'HH:mm:ss\'Z\''}<%_ }  _%>
-  <%_ if(field.fieldIsEnum) { _%>, enumValues: <%= field.fieldType %>.values <%_ }  _%>)
-  final <%= field.fieldType %> <%= field.fieldName %>;
+  @JsonProperty(name: '<%- field.fieldName _%>' <%_ if(field.fieldType === 'DateTime') { _%>, converterParams: {'format': 'yyyy-MM-dd\'T\'HH:mm:ss\'Z\''}<%_ }  _%>)
+  final <%= field.fieldType %>? <%= field.fieldName %>;
 <%_ }); _%>
 <%_ relationships.forEach(relationship => { %>
   @JsonProperty(name: '<%- relationship.relationshipFieldName _%>')
       <%_ if(relationship.isList) { _%>
-  final List<<%- relationship.otherEntityNameCapitalized %>> <%- relationship.relationshipFieldName _%>;
+  final List<<%- relationship.otherEntityNameCapitalized %>>? <%- relationship.relationshipFieldName _%>;
       <%_ } else { _%>
-  final <%= relationship.otherEntityNameCapitalized %> <%= relationship.relationshipFieldName %>;
+  final <%= relationship.otherEntityNameCapitalized %>? <%= relationship.relationshipFieldName %>;
       <%_ } _%>
   <%_ }); _%>
 
@@ -77,7 +76,6 @@ fields.forEach(field => {
     if (field.fieldIsEnum && enumsAlreadyDeclared.indexOf(field.fieldType) === -1) {
         enumsAlreadyDeclared.push(field.fieldType); _%>
 @jsonSerializable
-@Json(enumValues: <%= field.fieldType %>.values)
 enum <%= field.fieldType %> {<%
         const enums = field.fieldValues.split(',');
         for (let i = 0; i < enums.length; i++) { %>
