--- a/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/account/register/register_screen.dart.ejs
@@ -73,7 +73,7 @@ class RegisterScreen extends StatelessWidget {
         builder: (context, state) {
           return TextFormField(
               initialValue: state.login.value,
-              onChanged: (value) { context.bloc<RegisterBloc>().add(LoginChanged(login: value)); },
+              onChanged: (value) { context.read<RegisterBloc>().add(LoginChanged(login: value)); },
               keyboardType: TextInputType.text,
               decoration: InputDecoration(
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>,
@@ -86,7 +86,7 @@ class RegisterScreen extends StatelessWidget {
         buildWhen: (previous, current) => previous.email != current.email,
         builder: (context, state) {
           return TextFormField(
-            onChanged: (value) { context.bloc<RegisterBloc>().add(EmailChanged(email: value)); },
+            onChanged: (value) { context.read<RegisterBloc>().add(EmailChanged(email: value)); },
             keyboardType: TextInputType.emailAddress,
             decoration: InputDecoration(
                 labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormEmail <%_ } else { _%> 'Email' <%_ } _%>,
@@ -101,7 +101,7 @@ class RegisterScreen extends StatelessWidget {
         buildWhen: (previous, current) => previous.password != current.password,
         builder: (context, state) {
           return TextFormField(
-              onChanged: (value) { context.bloc<RegisterBloc>().add(PasswordChanged(password: value)); },
+              onChanged: (value) { context.read<RegisterBloc>().add(PasswordChanged(password: value)); },
               obscureText: true,
               decoration: InputDecoration(
                   labelText:<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormPassword <%_ } else { _%> 'Password' <%_ } _%>,
@@ -114,7 +114,7 @@ class RegisterScreen extends StatelessWidget {
         buildWhen: (previous, current) => previous.confirmPassword != current.confirmPassword,
         builder: (context, state) {
           return TextFormField(
-              onChanged: (value) { context.bloc<RegisterBloc>().add(ConfirmPasswordChanged(confirmPassword: value, password: state.password.value)); },
+              onChanged: (value) { context.read<RegisterBloc>().add(ConfirmPasswordChanged(confirmPassword: value, password: state.password.value)); },
               obscureText: true,
               decoration: InputDecoration(
                   labelText: <%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormConfirmPassword <%_ } else { _%> 'Confirm password' <%_ } _%>,
@@ -136,7 +136,7 @@ class RegisterScreen extends StatelessWidget {
                     height: 24,
                     width: 24,
                     child: Checkbox(
-                        onChanged: (value) { context.bloc<RegisterBloc>().add(TermsAndConditionsChanged(termsAndConditions: value)); },
+                        onChanged: (value) { context.read<RegisterBloc>().add(TermsAndConditionsChanged(termsAndConditions: value!)); },
                         value: state.termsAndConditions.value),
                   ),
                   Padding(
@@ -195,7 +195,7 @@ class RegisterScreen extends StatelessWidget {
     return BlocBuilder<RegisterBloc, RegisterState>(
         buildWhen: (previous, current) => previous.status != current.status,
         builder: (context, state) {
-          return RaisedButton(
+          return ElevatedButton(
             child: Container(
                 width: MediaQuery.of(context).size.width,
                 height: 50,
@@ -207,7 +207,7 @@ class RegisterScreen extends StatelessWidget {
                     ),
                   ),
                 )),
-            onPressed: state.status.isValidated ? () => context.bloc<RegisterBloc>().add(FormSubmitted()) : null,
+            onPressed: state.status.isValidated ? () => context.read<RegisterBloc>().add(FormSubmitted()) : null,
           );
         });
   }
@@ -240,7 +240,7 @@ class RegisterScreen extends StatelessWidget {
                   Padding(
                     padding: EdgeInsets.only(top: 30),
                   ),
-                  RaisedButton(
+                  ElevatedButton(
                     child: Container(
                         child: Center(
                             child: Text(<%_ if (enableTranslation) { _%> S.of(context).pageRegisterFormLogin <%_ } else { _%> 'Login' <%_ } _%>))),
