--- a/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/main/main_screen.dart.ejs
@@ -13,7 +13,7 @@ import 'package:url_launcher/url_launcher.dart';
 
 
 class MainScreen extends StatelessWidget {
-  MainScreen({Key key}) : super(key: <%= camelizedUpperFirstBaseName %>Keys.mainScreen);
+  MainScreen({Key? key}) : super(key: <%= camelizedUpperFirstBaseName %>Keys.mainScreen);
 
   @override
   Widget build(BuildContext context) {
@@ -58,7 +58,7 @@ class MainScreen extends StatelessWidget {
     return BlocBuilder<MainBloc, MainState>(
         buildWhen: (previous, current) => previous.currentUser != current.currentUser,
         builder: (context, state) {
-        String login = state.currentUser.login;
+        String login = state.currentUser.login!;
         return Column(
           mainAxisAlignment: MainAxisAlignment.center,
           children: <Widget>[
@@ -76,7 +76,7 @@ class MainScreen extends StatelessWidget {
   Widget linkWidget(BuildContext context, String text, String url){
     return Padding(
       padding: const EdgeInsets.only(bottom: 15),
-      child: RaisedButton(
+      child: ElevatedButton(
           onPressed: () => _launchURL(url),
           child: Container(
             child: Text(text, textAlign: TextAlign.center,),
