--- a/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
+++ b/generators/app/templates/flutter/flutter-app/lib/shared/widgets/drawer/drawer_widget.dart.ejs
@@ -9,7 +9,7 @@ import 'package:flutter/material.dart';
 // jhipster-merlin-needle-menu-import-entry-add
 
 class <%= camelizedUpperFirstBaseName %>Drawer extends StatelessWidget {
-   <%= camelizedUpperFirstBaseName %>Drawer({Key key}) : super(key: key);
+   <%= camelizedUpperFirstBaseName %>Drawer({Key? key}) : super(key: key);
 
    static final double iconSize = 30;
 
@@ -40,7 +40,7 @@ class <%= camelizedUpperFirstBaseName %>Drawer extends StatelessWidget {
             ListTile(
               leading: Icon(Icons.exit_to_app, size: iconSize,),
           title: Text(<%_ if (enableTranslation) { _%>S.of(context).drawerLogoutTitle<%_ } else { _%>'Sign out'<%_ } _%>),
-              onTap: () => context.bloc<DrawerBloc>().add(Logout())
+              onTap: () => context.read<DrawerBloc>().add(Logout())
             ),
             Divider(thickness: 2),
             // jhipster-merlin-needle-menu-entry-add
